style: style button and fix layout alignment

--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,11 @@
 body {
-    background-color: #002029;
+    background-color: #0A1128;
     display: flex;
     flex-direction: column;
     justify-content: center; 
     align-items: center;
     min-height: 100vh;
-    color: black,
+
   
 }
 
@@ -13,22 +13,25 @@ h1 {
     font-size: 60px;
     font-family: Impact, Haettenschweiler, 'Arial Sans Serif';
     font-weight: bold;
-    color: white;
+    color: #FEFCFB;
 }
 .Felder {
-    background: #004052;
+    background: #034078;
     border-radius: 12px;
     padding: 4rem;
     display: flex;
     margin:  2rem;
+    width: 100%;
 }
 .datum-feld, .zeit, .checkbox, .eintragen {
-    padding: 0.25rem;
-    margin: 0.5rem;
-    color: white;
+    padding: 5px;
+    margin: 5rem;
+    color: #FEFCFB;
+    
 }
 .label {
-    display: block;
+    display: flex;
+    border-radius: 80px;
 }
 .Name {
     margin-top: 20px;
@@ -36,7 +39,27 @@ h1 {
     align-items: center;
     font-size: 15px;
     font-family: Tahoma;
+    padding: 0.5px;
+    border-radius: 80px;
 }
 .button {
-    color: rgba(59, 213, 227, 0.1)
+    background-color: #1282A2;
+    border: none;
+    border-color: #000000;
+    padding: 5px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;
+    width: auto;
+    align-self: flex-end
+}
+.Eintrag {
+    color: #E0E1DD;
+    border: var(--border);
+    padding: 5px;
+    margin: 5px;
+    width: 100%;
+    
+
 }
